feat: allow admins to grant tester credits
